<resources>
    <string name="app_name">Calio</string>
    <string name="login">PRIHLÁSIŤ SA</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Registrácia</string>
    <string name="click_to_login">Prihlásiť sa</string>
    <string name="click_to_register">Registrovat sa</string>
    <string name="hello_world">Hello world</string>
    <string name="logout">logout</string>
    <string name="PRIHLÁSENIE">PRIHLÁSENIE</string>
    <string name="btn_hl">POKRAČOVAŤ</string>
    <string name="add">Pridať jedlo</string>
    <string name="nacitavam">Načítavam jedlá...</string>
    <string name="jedla">Jedlá</string>
    <string name="vratit">Späť</string>
    <string name="ulo_i_limit">Uložiť limit</string>
    <string name="odhl_si_sa">ODHLÁSIŤ SA</string>
    <string name="todo">TODO</string>
    <string name="zadaj_limit_napr_1800">Zadaj limit (napr. 1800)</string>
    <string name="denn_kalorick_limit">Denný kalorický limit:</string>
    <string name="pou_vate">Používateľ</string>
    <string name="profil">Profil</string>

</resources>