<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            app:srcCompat="@drawable/calio" />

        <TextView
            android:text="@string/PRIHLÁSENIE"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="10dp"
            android:background="@drawable/prihlasenie"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:background="@drawable/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:background="@drawable/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/red_custom"
            android:text="@string/login" />

        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/registerNow"
            android:text="@string/click_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
