<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:padding="40dp"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        app:srcCompat="@drawable/calio" />

    <TextView
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/prihlasenie"

        android:padding="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:background="@drawable/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:background="@drawable/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:backgroundTint="@color/red_custom"
        android:layout_marginTop="70dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>